2013-05-07  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_module_interval.php
	include/help/en/help_module_interval_factor.php
	include/help/es/help_module_interval.php
	include/help/es/help_module_interval_factor.php
	include/help/ja/help_module_interval.php
	godmode/agentes/module_manager_editor_common.php: Change the
	interval control when module is a data module. Added help
	to know difference between interval and interval factor 
	Merged from trunk. For bug 2112

2013-05-04  Junichi Satoh  <junichi@rworks.jp>

	* mobile/index.php, mobile/include/user.class.php,
	mobile/include/ui.class.php, include/functions.php: Fixed i18n failure
	in the mobile console.

	Merged from trunk.

2013-04-29  Sergio Martin <sergio.martin@artica.es>

	* images/status_sets/faces/severity_informational.png
	images/status_sets/faces/severity_warning_pixel.png
	images/status_sets/faces/agent_critical_ball.png
	images/status_sets/faces/module_unknown.png
	images/status_sets/faces/module_warning_ball.png
	images/status_sets/faces/module_ok_ball.png
	images/status_sets/faces/module_alertsfired.png
	images/status_sets/faces/severity_maintenance.png
	images/status_sets/faces/agent_no_data_ball.png
	images/status_sets/faces/agent_ok_ball.png
	images/status_sets/faces/severity_normal_pixel.png
	images/status_sets/faces/severity_critical.png
	images/status_sets/faces/server_down_ball.png
	images/status_sets/faces/alert_not_fired_ball.png
	images/status_sets/faces/severity_informational_pixel.png
	images/status_sets/faces/module_unknown_ball.png
	images/status_sets/faces/severity_warning.png
	images/status_sets/faces/agent_down_ball.png.png
	images/status_sets/faces/module_no_data_ball.png
	images/status_sets/faces/alert_fired_ball.png
	images/status_sets/faces/agent_warning_ball.png
	images/status_sets/faces/severity_maintenance_pixel.png
	images/status_sets/faces/agent_no_monitors_ball.png
	images/status_sets/faces/alert_disabled_square.png