@@ -1,5 +1,12 @@
 2013-05-07  Sergio Martin <sergio.martin@artica.es>
 
+	* include/help/en/help_module_tokens.php
+	include/help/es/help_module_tokens.php: Added help docs
+	to  explain the module configuration tokens when create
+	a module from console
+
+2013-05-07  Sergio Martin <sergio.martin@artica.es>
+
 	* include/help/en/help_module_interval.php
 	include/help/en/help_module_interval_factor.php
 	include/help/es/help_module_interval.php
